Remove files and old junit dep